feat: Переделал на MVVM и GstGLQt6VideoItem

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,15 @@ CMakeLists.txt.user*
 .rcc/
 .uic/
 /build*/
+
+# From CLion
+/cmake-build-*/
+~$*
+~*.tmp
+.~lock*
+*.drawio.bkp
+*.state.json
+
+# And Clion
+/.idea/
+
