--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,14 @@ cmake_minimum_required(VERSION 3.16)
 
 project(qtTestBenchSIP VERSION 0.1 LANGUAGES CXX)
 
+set(CMAKE_CXX_STANDARD 17)
+set(QT_QML_GENERATE_QMLLS_INI ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Quick OpenGL)
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -17,23 +22,30 @@ qt_add_qml_module(testBenchSIP
     VERSION 1.0
     QML_FILES
         Main.qml
+        VideoItem.qml
+    SOURCES
+        ViewModels/MainViewModel.h
+        ViewModels/MainViewModel.cpp
+        Extension/JsonConfig.h
+        Extension/JsonConfig.cpp
+        Extension/LambdaRunnable.h
 )
 
 configure_file("./config.json" config.json COPYONLY)
 
-# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
-# If you are developing for iOS or macOS you should consider setting an
-# explicit, fixed bundle identifier manually though.
-set_target_properties(testBenchSIP PROPERTIES
-#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.testBenchSIP
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
-    MACOSX_BUNDLE TRUE
-    WIN32_EXECUTABLE TRUE
+target_include_directories(testBenchSIP PRIVATE
+    ${GSTREAMER_INCLUDE_DIRS}
+    ${CMAKE_SOURCE_DIR}/Extension
+    ${CMAKE_SOURCE_DIR}/ViewModels
+)
+
+target_link_directories(testBenchSIP PRIVATE
+    ${GSTREAMER_LIBRARY_DIRS}
 )
 
 target_link_libraries(testBenchSIP
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::OpenGL
+    ${GSTREAMER_LIBRARIES}
 )
 
 include(GNUInstallDirs)
@@ -42,3 +54,12 @@ install(TARGETS testBenchSIP
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
+
+if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    target_compile_options(testBenchSIP PRIVATE -O0 -g)
+    target_link_options(testBenchSIP PRIVATE -O0 -g)
+    target_compile_definitions(testBenchSIP PRIVATE DEBUG)
+else ()
+    target_compile_options(testBenchSIP PRIVATE -Os)
+    target_link_options(testBenchSIP PRIVATE -Os -Wl,--strip-all)
+endif ()
