--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,13 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(qtTestBenchSIP VERSION 0.1 LANGUAGES CXX)
+set(TARGET_NAME testBenchSIP)
+set(TARGET_FULL_NAME qtTestBenchSIP)
+
+project(${TARGET_FULL_NAME})
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_COLOR_DIAGNOSTICS ON)
+
 set(QT_QML_GENERATE_QMLLS_INI ON)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
@@ -13,12 +18,12 @@ pkg_check_modules(GSTREAMER REQUIRED gstreamer-1.0)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
-qt_add_executable(testBenchSIP
+qt_add_executable(${TARGET_NAME}
     main.cpp
 )
 
-qt_add_qml_module(testBenchSIP
-    URI qtTestBenchSIP
+qt_add_qml_module(${TARGET_NAME}
+    URI ${TARGET_FULL_NAME}
     VERSION 1.0
     QML_FILES
         Main.qml
@@ -31,35 +36,35 @@ qt_add_qml_module(testBenchSIP
         Extension/LambdaRunnable.h
 )
 
-configure_file("./config.json" config.json COPYONLY)
+configure_file("${CMAKE_SOURCE_DIR}/config.json" config.json COPYONLY)
 
-target_include_directories(testBenchSIP PRIVATE
+target_include_directories(${TARGET_NAME} PRIVATE
     ${GSTREAMER_INCLUDE_DIRS}
     ${CMAKE_SOURCE_DIR}/Extension
     ${CMAKE_SOURCE_DIR}/ViewModels
 )
 
-target_link_directories(testBenchSIP PRIVATE
+target_link_directories(${TARGET_NAME} PRIVATE
     ${GSTREAMER_LIBRARY_DIRS}
 )
 
-target_link_libraries(testBenchSIP
+target_link_libraries(${TARGET_NAME}
     PRIVATE Qt6::Quick Qt6::OpenGL
     ${GSTREAMER_LIBRARIES}
 )
 
 include(GNUInstallDirs)
-install(TARGETS testBenchSIP
-    BUNDLE DESTINATION .
+install(TARGETS ${TARGET_NAME}
+    BUNDLE DESTINATION ${CMAKE_SOURCE_DIR}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 )
 
 if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(testBenchSIP PRIVATE -O0 -g)
-    target_link_options(testBenchSIP PRIVATE -O0 -g)
-    target_compile_definitions(testBenchSIP PRIVATE DEBUG)
+    target_compile_options(${TARGET_NAME} PRIVATE -O0 -g)
+    target_link_options(${TARGET_NAME} PRIVATE -O0 -g)
+    target_compile_definitions(${TARGET_NAME} PRIVATE DEBUG)
 else ()
-    target_compile_options(testBenchSIP PRIVATE -Os)
-    target_link_options(testBenchSIP PRIVATE -Os -Wl,--strip-all)
+    target_compile_options(${TARGET_NAME} PRIVATE -Os)
+    target_link_options(${TARGET_NAME} PRIVATE -Os -Wl,--strip-all)
 endif ()
